--- a/HTML.html
+++ b/HTML.html
@@ -14,5 +14,37 @@
         <h3>Styl<big>e</big> & Colors</h3>
         <p style="color: blue; background-color: blueviolet;">You can style your HTML</p>
         <hr>
+        <h3>Links</h3>
+        <a href="https://www.google.com" target="_blank">Google's Homepage</a>
+        <a href="Formating.html" target="_blank">Page 2</a>
+        <hr>
+        <h3>Images</h3>
+        <img width="100" src="bike.jpg" alt="Heavy Bike">
+        <hr>
+        <h3>Videos</h3>
+        <video src="ab to sach.mp4" poster="" autoplay controls width="300"></video>
+        <h3>Youtube Videos</h3>
+        <iframe width="500" height="300" src="https://www.youtube.com/embed/yR9ZW4mS_EA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
+        <h3>Lists</h3>
+        <ul>
+            <li>Apples</li>
+            <li>Mangoes</li>
+            <li><a href="#">Bananas</a></li>
+        </ul>
+        <ol type="I">
+            <li>Apples</li>
+            <li>Mangoes</li>
+            <li><a href="#">Bananas</a></li>
+        </ol>
+        <dl>
+            <dt>Pakistan</dt>
+            <dd>- It is Beautiful.</dd>
+        </dl>
+        <hr>
+        <h3>Tables</h3>
+        <table>
+            
+        </table>
     </body>
 </html>
