--- a/HTML.html
+++ b/HTML.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" name="description" content="Your description">
+        <meta name="author" content="Wajahat">
+        <meta name="keywords" content="HTML">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wajahat's Website</title>
     </head>
     <body>
@@ -44,7 +48,57 @@
         <hr>
         <h3>Tables</h3>
         <table>
-            
+            <thead>
+              <caption><h3>List of Numbers</h3></caption>
+              <tr>
+                <th>num1</th>
+                <th>num2</th>
+                <th>num3</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="2">One</td>
+                <td>Two</td>
+                <td>Three</td>
+              </tr>
+              <tr>
+                <td>Four</td>
+                <td>Five</td>
+                <td>Six</td>
+              </tr>
+            </tbody>
         </table>
+        <hr>
+        <h3>Divs & Spans</h3>
+        <span>span1</span>
+        <span>span2</span>
+        <div class="">
+          div1
+        </div>
+        <div class="">
+          div2
+        </div>
+        <hr>
+        <h3>Input & Forms</h3>
+        <input type="text" name="" value="Enter Your username">
+        <input type="password" name="" value="">
+        <textarea name="name" rows="8" cols="10">Enter a Paragraph</textarea>
+        <input type="date" name="" value="">
+        <input type="email" name="" value="">
+        <input type="range" name="" value="">
+        <input type="file" name="" value="">
+        <input type="checkbox" name="" value="">
+        <input type="radio" name="" value="">
+        <input type="button" name="" value="Submit">
+        <form class="" action="index.html" method="post">
+          <input type="button" name="" value="Ok"
+        </form>
+        <hr>
+        <h3>iFrames</h3>
+        <iframe src="https://www.mikedane.com/" frameborder="0" width="" height="">Sorry</iframe>
+        <hr>
+        <h3>Meta Tags</h3>
+
     </body>
 </html>
